# seer-nnue

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: apply.h  bench.h  bit_field.h  bit_range.h  board.h  board_state.h  book.h  chess_types.h  counter_move_heuristic.h  data_generator.h  dot_type.h  embedded_weights.h  enum_util.h  eval_cache.h  eval_node.h  evaluator_cache.h  feature_hash_util.h  feature_transformer_cache.h  feature_util.h  fractional.h  history_heuristic.h  kpt_cache.h  latent.h  local_cache.h  manifest.h  mcts.h  move.h  move_orderer.h  move_picker.h  move_prediction.h  nnue_delta_cache.h  nnue_eval_node.h  nnue_feature_reset_cache.h  nnue_half_kp.h  nnue_model.h  nnue_stats.h  nnue_util.h  option_parser.h  piece_configuration.h  position_history.h  (+19 more)
include/chess/: board.h  board_history.h  board_state.h  castle_info.h  cuckoo_hash_table.h  move.h  move_list.h  move_zobrist_hasher.h  pawn_info.h  piece_configuration.h  square.h  table_generation.h  types.h
include/engine/: bench.h  command_lexer.h  option_parser.h  time_manager.h  uci.h  version.h
include/engine/processor/: condition_type.h  consume_type.h  emit_all_type.h  emit_n_type.h  emit_type.h  invoke_type.h  key_type.h  null_type.h  parallel_combinator_type.h  receiver_combinator_type.h  sequential_combinator_type.h  types.h
include/feature/: util.h
include/incbin/: incbin.h
include/nnue/: aligned_scratchpad.h  aligned_slice.h  aligned_vector.h  dense_fused_affine_layer.h  dense_relu_affine_layer.h  dense_relu_affine_reduction_layer.h  dot_type.h  embedded_weights.h  eval.h  eval_node.h  eval_prefetcher.h  feature_reset_cache.h  feature_transformer.h  feature_transformer_prefetcher.h  simd.h  sparse_affine_layer.h  weights.h  weights_exporter.h  weights_streamer.h
include/search/: adaptive_lmp_history.h  adaptive_reduction_history.h  composite_feature_hash.h  eval_cache.h  eval_correction_history.h  eval_delta_history.h  history_heuristic.h  lsh_move_cache.h  move_orderer.h  search_constants.h  search_stack.h  search_worker.h  search_worker_external_state.h  search_worker_internal_state.h  search_worker_orchestrator.h  search_worker_thread.h  syzygy.h  transposition_table.h
include/util/: bit_range.h  string.h  swap.h  tuple.h  unreachable.h
include/zobrist/: util.h  zobrist_hasher.h
logo/: logo_gen.py
src/: seer.cc  selfplay.cc
src/chess/: board.cc  board_state.cc  move.cc  move_list.cc  square.cc
src/engine/: bench.cc  option_parser.cc  time_manager.cc  uci.cc
src/search/: move_orderer.cc  options.uci  search_stack.cc  search_worker.cc  search_worker_orchestrator.cc  syzygy.cc  transposition_table.cc
syzygy/: LICENSE  README.md  stdendian.h  tbchess.c  tbchess.cc  tbprobe.c  tbprobe.cc
test/: perft.cc  test_after_uci_moves.cc  test_bit_field.cc  test_bit_range.cc  test_board.cc  test_crtp.cc  test_eval_history.cc  test_feature_indices.cc  test_half_kp_indices.cc  test_hash.cc  test_history.cc  test_history_heuristic.cc  test_is_passed.cc  test_lva.cc  test_move_orderer.cc  test_move_picker.cc  test_nnue_perf.cc  test_option_parser.cc  test_param_stats.cc  test_parse_fen.cc  test_propagate.cc  test_pv_search.cc  test_search.cc  test_search_stack.cc  test_see.cc  test_streamer.cc  test_tbl.cc  test_time_manager.cc  test_training.cc  test_tt.cc  test_worker.cc
train/: config.py  config.yaml  data_generation.py  dataset.py  generate_data.py  model.py  nnue_bin_dataset.py  test_bin_dataset.py  test_dataset.py  test_model.py  train.py  util.py  visualize_model.py
